--- a/Code along /index.html
+++ b/Code along /index.html
@@ -15,7 +15,7 @@
 
     <div class="header">
         <ul>
-                <li><a href="about.html">Om</a></li>
+                <li><a href="about.html">Om oss</a></li>
                 <li><a href="map.html">Hitta till oss</a></li>
                 <li><a href="book.html">Boka</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
