--- a/Code along /index.html
+++ b/Code along /index.html
@@ -16,7 +16,7 @@
     <div class="header">
         <ul>
                 <li><a href="about.html">Om oss</a></li>
-                <li><a href="map.html">Hitta till oss</a></li>
+                <li><a href="map.html">Hitta oss</a></li>
                 <li><a href="book.html">Boka</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><a href="service.html">Våra övriga tjänster</a></li>
