--- a/Code along /contact.html
+++ b/Code along /contact.html
@@ -33,7 +33,7 @@
 
 
     <div class="forma">
-    <h2>Ställ en fråga?</h2>	
+    <h2>Ställ en fråga</h2>	
     <form id="kontakt" name="kontakt" method="post" action="formmail.php">
     <label for="fnamn">Förnamn</label><br>
     <input type="text" id="fname" name="firstname" placeholder="Förnamn.."><br>
