--- a/Code along /service.html
+++ b/Code along /service.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="column" style="background-color:#aaa;">
         <h2>Biltvätt</h2>
-        <p>Some text..</p>
+        <p>dsldsdsd</p>
       </div>
       <div class="column" style="background-color:#bbb;">
         <h2>Bil service</h2>
