--- a/service.html
+++ b/service.html
@@ -40,7 +40,10 @@
     <div class="row">
       <div class="column" style="background-color:#aaa;">
         <h2>Biltvätt</h2>
-        <p>Some text..</p>
+        <ul>
+          <li>standard</li>
+          <li>Deluxe</li>
+          </ul>
       </div>
       <div class="column" style="background-color:#bbb;">
         <h2>Bil service</h2>
