--- a/service.html
+++ b/service.html
@@ -40,10 +40,7 @@
     <div class="row">
       <div class="column" style="background-color:#aaa;">
         <h2>Biltvätt</h2>
-        <ul>
-          <li>standard</li>
-          <li>Deluxe</li>
-          </ul>
+        <p>Some text..</p>
       </div>
       <div class="column" style="background-color:#bbb;">
         <h2>Bil service</h2>
