--- a/service.html
+++ b/service.html
@@ -38,15 +38,15 @@
     
 
     <div class="row">
-      <div class="column" style="background-color:#aaa;">
+      <div class="column">
         <h2>Biltvätt</h2>
         <p>Some text..</p>
       </div>
-      <div class="column" style="background-color:#bbb;">
+      <div class="column">
         <h2>Bil service</h2>
         <p>Some text..</p>
       </div>
-      <div class="column" style="background-color:#ccc;">
+      <div class="column">
         <h2>Däckbyte</h2>
         <p>Some text..</p>
       </div>
