--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="column">
           <div class="imgservice">
-              <img src="tire.png">
+              <img src="tire.jpg">
           </div>
         <h2>Biltvätt</h2>
  
@@ -49,7 +49,7 @@
       </div>
       <div class="column">
           <div class="imgservice">
-              <img src="carwash.png">
+              <img src="carwash.jpg">
           </div>
         <h2>Bil service</h2>
 
@@ -58,7 +58,7 @@
       </div>
       <div class="column">
           <div class="imgservice">
-              <img src="carservice.png">
+              <img src="carservice.jpg">
           </div>
         <h2>Däckbyte</h2>
 
