--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
       </div>
       <div class="column">
           <div class="imgservice">
-              <img src="carwash.png">
+              <img src="carwash2.png">
           </div>
         <h2>Bil service</h2>
 
@@ -58,7 +58,7 @@
       </div>
       <div class="column">
           <div class="imgservice">
-              <img src="carservice.png">
+              <img src="carservice2.png">
           </div>
         <h2>Däckbyte</h2>
 
