--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="column">
           <div class="imgservice">
-              <img src="tire.jpg">
+              <img src="tir2.png">
           </div>
         <h2>Biltvätt</h2>
  
