--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     </div>
 
-    <img src="car.png">
+    <img src="car.png" alt="bil">
    
     <div class="line">
             <P>____________________________________________________________________________________________________________________________________________________________</P>  
