--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 <head>
     <title>Deluxe parkering</title>
     <link rel="stylesheet" type="text/css" href="design.css?" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Rajdhani&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca%7cRajdhani&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <meta charset="utf-8">
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="column">
           <div class="imgservice">
-              <img src="tire2.png">
+              <img src="tire2.png" alt="däck">
           </div>
         <h2>Däckbyte</h2>
  
@@ -55,7 +55,7 @@
       </div>
       <div class="column">
           <div class="imgservice">
-              <img src="carwash2.png">
+              <img src="carwash2.png" alt="Biltvätt">
           </div>
         <h2>Biltvätt</h2>
 
@@ -70,7 +70,7 @@
       </div>
       <div class="column">
           <div class="imgservice">
-              <img src="carservice2.png">
+              <img src="carservice2.png" alt="bilservice">
           </div>
         <h2>Bilservice</h2>
         <br/>
@@ -97,6 +97,6 @@
         <p>Info@LP.se │ 018 200 100 │ Kungsängsgatan 54 753 18 Uppsala</p>
 
     </div>
-    </body>
+  </body>
 
-    </html>
+</html>
