--- a/service.html
+++ b/service.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+lang="en">
 <html>
-
+<lang="en">
 <head>
     <title>Deluxe parkering</title>
     <link rel="stylesheet" type="text/css" href="design.css?" />
@@ -22,7 +23,8 @@
             <li><a href="service.html">Våra övriga tjänster</a></li>
             <li><a href="index.html">Startsida</a></li>
         </ul>
-    <div class="name">Deluxe parkering</div> 
+    <div class="name">Deluxe parkering</div>
+    </div>
     <br/>
     <br/>
     <br/>
@@ -30,7 +32,7 @@
     <br/>
     <br/>
     <br/>
-      <br/>
+    <br/>
     <br/>
     <br/>
     <br/>
