--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <title>Deluxe parkering</title>
     <link rel="stylesheet" type="text/css" href="design.css?" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Rajdhani&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca%7cRajdhani&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <meta charset="utf-8">
@@ -46,7 +46,7 @@
     </div>
 
     <div class="imgcontact">
-        <img src="Man.jpg">
+        <img src="Man.jpg" alt="Bild på man">
     </div>
 
     <div class="line">
