--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
 <head>
     <title>Deluxe parkering</title>
     <link rel="stylesheet" type="text/css" href="design.css?" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Rajdhani&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca%7cRajdhani&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <meta charset="utf-8">
