--- a/book.html
+++ b/book.html
@@ -53,7 +53,7 @@
         </form>	
         </div>
         <div class="imgbook">
-            <img src="clock.jpg alt" alt="Klocka">
+            <img src="clock.jpg" alt="alt="Klocka">
         </div>
         <div class="line">
                 <P>____________________________________________________________________________________________________________________________________________________________</P>  
