--- a/map.html
+++ b/map.html
@@ -23,9 +23,9 @@
             <li><a href="index.html">Startsida</a></li>
         </ul>
     <div class="name">Deluxe parkering</div> 
-
+    </div>
     <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2003.7133607544833!2d17.64531051601498!3d59.85390038184544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465fcbfb840727d5%3A0xd7e7da3f98a934c5!2sKungs%C3%A4ngsgatan%2054%2C%20753%2019%20Uppsala!5e0!3m2!1ssv!2sse!4v1568129948271!5m2!1ssv!2sse" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2003.7133607544833!2d17.64531051601498!3d59.85390038184544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465fcbfb840727d5%3A0xd7e7da3f98a934c5!2sKungs%C3%A4ngsgatan%2054%2C%20753%2019%20Uppsala!5e0!3m2!1ssv!2sse!4v1568129948271!5m2!1ssv!2sse" ></iframe>
     </div>
 
     <div class="adress">
