--- a/book.html
+++ b/book.html
@@ -32,10 +32,10 @@
         <h2>Fyll i nedanstående uppgifter så kontaktar</h2>	
         <h2>vi dig inom 15 minuter</h2>
         <form id="kontakt" name="kontakt" method="post" action="formmail.php">
-        <label for="fnamn">Namn</label><br>
-        <input type="text" id="fname" name="firstname" placeholder="Namn.."><br>
+        <label for="Firstname1">Namn</label><br>
+        <input type="text" id="firstname2" name="firstname" placeholder="Namn.."><br>
         <label for="enamn">Registeringsnummer</label><br>
-        <input type="text" id="fname" name="Efternamn" placeholder="Registeringsnummer.."><br>
+        <input type="text" id="firstname3" name="Efternamn" placeholder="Registeringsnummer.."><br>
         <label for="service">Välj tjänst</label>
         <br/>
               <select id="service" name="service">
@@ -53,7 +53,7 @@
         </form>	
         </div>
         <div class="imgbook">
-            <img src="clock.jpg" alt="alt="Klocka">
+            <img src="clock.jpg" alt="clock">
         </div>
         <div class="line">
                 <P>____________________________________________________________________________________________________________________________________________________________</P>  
