--- a/book.html
+++ b/book.html
@@ -32,9 +32,9 @@
         <h2>Fyll i nedanstående uppgifter så kontaktar</h2>	
         <h2>vi dig inom 15 minuter</h2>
         <form id="kontakt" name="kontakt" method="post" action="formmail.php">
-        <label for="Firstname1">Namn</label><br>
+        <label for="Firstname">Namn</label><br>
         <input type="text" id="firstname2" name="firstname" placeholder="Namn.."><br>
-        <label for="enamn">Registeringsnummer</label><br>
+        <label for="lastname">Registeringsnummer</label><br>
         <input type="text" id="firstname3" name="Efternamn" placeholder="Registeringsnummer.."><br>
         <label for="service">Välj tjänst</label>
         <br/>
