--- a/book.html
+++ b/book.html
@@ -32,8 +32,10 @@
         <h2>Fyll i nedanstående uppgifter så kontaktar</h2>	
         <h2>vi dig inom 15 minuter</h2>
         <form id="kontakt" name="kontakt" method="post" action="formmail.php">
-        <label for="Firstname2">Namn</label><br>
-        <input type="text" id="firstname2" name="firstname" placeholder="Namn.."><br>
+
+        <label for="name">Namn</label><br>
+        <input type="text" id="name" name="firstname" placeholder="Namn.."><br>
+
         <label for="reg">Registeringsnummer</label><br>
         <input type="text" id="reg" name="Efternamn" placeholder="Registeringsnummer.."><br>
         <label for="service">Välj tjänst</label>
