--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,13 @@
     <form id="kontakt" name="kontakt" method="post" action="formmail.php">
     <label for="fnamn">Förnamn</label><br>
     <input type="text" id="fname" name="firstname" placeholder="Förnamn.."><br>
+
     <label for="enamn">Efternamn</label><br>
-    <input type="text" id="fname" name="Efternamn" placeholder="Efternamn.."><br>
+    <input type="text" id="ename" name="Efternamn" placeholder="Efternamn.."><br>
+
     <label for="email">E-postadress</label><br>
-    <input type="text" id="fname" name="email" placeholder="E-postadress.."><br><br>
+    <input type="text" id="email" name="email" placeholder="E-postadress.."><br><br>
+
     <textarea name="message" cols="30" rows="5"></textarea><br><br>
     <input name="submit" type="submit"
     value="Skicka meddelandet">
