--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
             <li><a href="index.html">Startsida</a></li>
         </ul>
     <div class="name">Deluxe parkering</div> 
+    </div>
     <br/>
     <br/>
     <br/>
@@ -33,11 +34,11 @@
     <div class="forma">
     <h2>Ställ en fråga?</h2>	
     <form id="kontakt" name="kontakt" method="post" action="formmail.php">
-    <label for="fnamn">Förnamn</label><br>
-    <input type="text" id="fname" name="firstname" placeholder="Förnamn.."><br>
+    <label for="name">Förnamn</label><br>
+    <input type="text" id="name" name="firstname" placeholder="Förnamn.."><br>
 
-    <label for="enamn">Efternamn</label><br>
-    <input type="text" id="ename" name="Efternamn" placeholder="Efternamn.."><br>
+    <label for="lastname">Efternamn</label><br>
+    <input type="text" id="lastname" name="Efternamn" placeholder="Efternamn.."><br>
 
     <label for="email">E-postadress</label><br>
     <input type="text" id="email" name="email" placeholder="E-postadress.."><br><br>
