--- a/service.html
+++ b/service.html
@@ -68,7 +68,7 @@
           <div class="imgservice">
               <img src="carservice2.png" alt="bilservice">
           </div>
-        <h2>Bilservice</h2>
+        <h2>Service</h2>
         <br/>
         <p>Standard - 1595 kr</p>
         <br/>
@@ -83,9 +83,7 @@
 
 
 
-    <div class="line">
-        <P>____________________________________________________________________________________________________________________________________________________________</P>  
-</div>
+   
 
 
     <div class="info">
