--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca%7cRajdhani&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <meta name="viemport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
 </head>
