--- a/About.html
+++ b/About.html
@@ -13,17 +13,27 @@
 
 <body>
 
-    <div class="header">
-        <ul>
-            <li><a href="about.html">Om oss</a></li>
-            <li><a href="map.html">Hitta till oss</a></li>
-            <li><a href="book.html">Boka</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
-            <li><a href="service.html">Våra övriga tjänster</a></li>
-            <li><a href="index.html">Startsida</a></li>
-        </ul>
-    <div class="name">Deluxe parkering</div> 
-    </div>
+
+        <header>
+                <div class="nav-container">
+                    <nav class="nav-checkbox">
+                        <a href="#" class="logo">Deluxe parkering</a>
+                        <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
+                        <label for="tab-nav" class="tab-nav-label">Menu</label>
+                        <ul class="tab-content">
+                        <li><a href="about.html">Om oss</a></li>
+                          <li><a href="service.html">Övriga tjänster</a></li>
+                          <li><a href="book.html">Boka</a></li>
+                          <li><a href="contact.html">Kontakt</a></li>
+                          <li><a href="map.html">Hitta hit</a></li>
+                          <li><a href="index.html">Hem</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+        </br>
+        </br>
+        </br>
     <div class="imgabout">
             <img src="nvsh.PNG" alt="Om oss">
     </div>
