--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <header>
         <div class="nav-container">
             <nav class="nav-checkbox">
-                <a href="#" class="logo">logo</a>
+                <a href="#" class="logo">Deluxe parkering</a>
                 <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
                 <label for="tab-nav" class="tab-nav-label">Menu</label>
                 <ul class="tab-content">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Tour</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                <li><a href="about.html">Om oss</a></li>
+                  <li><a href="service.html">Övriga tjänster</a></li>
+                  <li><a href="book.html">Boka</a></li>
+                  <li><a href="contact.html">Kontakt</a></li>
+                  <li><a href="map.html">Hitta hit</a></li>
+                  <li><a href="index.html">Hem</a></li>
                 </ul>
             </nav>
         </div>
