--- a/About.html
+++ b/About.html
@@ -21,24 +21,27 @@
                         <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
                         <label for="tab-nav" class="tab-nav-label">Menu</label>
                         <ul class="tab-content">
-                        <li><a href="about.html">Om oss</a></li>
-                          <li><a href="service.html">Övriga tjänster</a></li>
-                          <li><a href="book.html">Boka</a></li>
-                          <li><a href="contact.html">Kontakt</a></li>
-                          <li><a href="map.html">Hitta hit</a></li>
-                          <li><a href="index.html">Hem</a></li>
+
+                                <li><a href="index.html">Hem</a></li>
+                                <li><a href="service.html">Övriga tjänster</a></li>
+                                <li><a href="book.html">Boka</a></li>
+                                <li><a href="contact.html">Kontakt</a></li>
+                                <li><a href="map.html">Hitta hit</a></li>
+                                <li><a href="about.html">Om oss</a></li>
                         </ul>
                     </nav>
                 </div>
             </header>
-        </br>
-        </br>
-        </br>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
     <div class="imgabout">
             <img src="nvsh.PNG" alt="Om oss">
     </div>
 
-    <div class="About">
+    <div class="infoabout">
         <h1>Om oss</h1>
          <h3>Er app</h3>
          <p>Med tanke att på er budget och era specifikations krav så valde vi på Jansson webbyrå att göra ett web-app.</p>
@@ -66,10 +69,10 @@
 
     </div>
 
-   
+</br>
 
 
-    <div class="infoabout">
+    <div class="info2">
     
         <p>Info@LP.se │ 018 200 100 │ Kungsängsgatan 54 753 18 Uppsala</p>
 
