--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
             <br/>
             <br/>
             <br/>
-            
+
     <div class="imgabout">
             <img src="nvsh.PNG" alt="Om oss">
     </div>
@@ -65,7 +65,7 @@
          <p>Inställningar göra en Native mer säker.</p>
          <h3>Vem ska man välja?</h3>
          <p>Det här med att välja är inte alltid det enklaste. Men som företagare ska man se över sina behov, så att man inte väljer fel app.</p>
-         <p>En native är mer utav en Deluxe app, medans en hybrid är en bra och väl fungerande app. Eftersom att man bygger en</p>
+         <p>En native-app är mer utav en Deluxe app, medans en hybrid är en bra och väl fungerande app. Eftersom att man bygger en</p>
          <p>Native app på flera ramverk så blir den också dyrare att bygga. Så utifrån era specifikationer så kommer en Hybrid app fungera mycket väl.</p>
 
     </div>
