--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <li><a href="book.html">Boka</a></li>
                   <li><a href="contact.html">Kontakt</a></li>
                   <li><a href="map.html">Hitta hit</a></li>
-                  <li><a href="test.html">Om oss</a></li>
+                  <li><a href="aboutus.html">Om oss</a></li>
                 </ul>
             </nav>
         </div>
