--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,9 @@
             <br/>
     
     <div class="forma">
+    
     <h2>Ställ en fråga?</h2>	
-    <form id="kontakt" name="kontakt" method="post" action="formmail.php">
+    <form id="kontakt" name="kontakt" method="post" action="Alexander_jansson_91@hotmail.com">
     <label for="name">Förnamn</label><br>
     <input type="text" id="name" name="firstname" placeholder="Förnamn.."><br>
 
