--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <div class="forma">
     
     <h2>Ställ en fråga?</h2>	
-    <form action="http://primat.se/services/sendform.aspx?recipient=Alexander_jansson_91@hotmail.com" method="post">
+    <form id="kontakt" name="kontakt" method="post" action="formmail.php">
     <label for="name">Förnamn</label><br>
     <input type="text" id="name" name="firstname" placeholder="Förnamn.."><br>
 
