--- a/About.html
+++ b/About.html
@@ -45,7 +45,7 @@
     <div class="infoabout">
         <h1>Om oss</h1>
          <h3>Er app</h3>
-         <p>Med tanke att på er budget och era specifikations krav så valde vi på Jansson webbyrå att göra ett web-app.</p>
+         <p>Med tanke att på er budget och era specifikations krav så valde vi på Janssons webbyrå att göra ett web-app.</p>
          <p>Detta underlättar också för era kunder då dom enbart behöver gå in på en valfri webbläsare. En web-app </p>
          <p>Är också enklare att uppdatera, vilket i slut ändan gör det billigare vid en uppdatering.</p>
          <p>Om ni efter en stund av användning skulle vilja uppgradera till en Native eller Hybrid app så är det möjligt.  </p>
@@ -58,11 +58,11 @@
          <p>Som t.ex Kamera och lagring. En hybrid app är också snabbare än en vanlig webb app.</p>
          <h3>Native</h3>
          <p>En native app kan man med en enkel förklaring säga är en app som enbart är anpassat för ett operativsystem, t.ex iOS.</p>
-         <p>Då kan man kanske undra varför man inte bygger en hybrid istället. Men det finns nämligen olikheter som gör att en Native är bättre.</p>
+         <p>Då kan man kanske undra varför man inte bygger en hybrid istället. Men det finns nämligen olikheter som gör att en native-app är bättre.</p>
          <p>Med en Native app kan man använda samtliga av telefonens funktioner. Eftersom att man bygger en app som enbart är anpassat till</p>
-         <p>Ett operativ system så blir det också möjligt att göra appen mer estestisk snygg och användarvänlig. När man bygger en Native </p>
-         <p>Så använder man sig av te.x Apples egna språk och ramverk, vilket gör att appen också blir säker. Man kan också med hjälp av </p>
-         <p>Inställningar göra en Native mer säker.</p>
+         <p>Ett operativ system så blir det också möjligt att göra appen mer estestisk snygg och användarvänlig. När man bygger en native-app </p>
+         <p>så använder man sig av te.x Apples egna språk och ramverk, vilket gör att appen också blir säkrare. Man kan också med hjälp av </p>
+         <p>Inställningar justera en native-apps säkerhet</p>
          <h3>Vem ska man välja?</h3>
          <p>Det här med att välja är inte alltid det enklaste. Men som företagare ska man se över sina behov, så att man inte väljer fel app.</p>
          <p>En native-app är mer utav en Deluxe app, medans en hybrid är en bra och väl fungerande app. Eftersom att man bygger en</p>
