--- a/About.html
+++ b/About.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Deluxe parkering</title>
@@ -48,11 +48,12 @@
          <p>Med tanke att på er budget och era specifikations krav så valde vi på Janssons webbyrå att göra ett web-app.</p>
          <p>Detta underlättar också för era kunder då dom enbart behöver gå in på en valfri webbläsare. En web-app </p>
          <p>Är också enklare att uppdatera, vilket i slut ändan gör det billigare vid en uppdatering.</p>
+         <p>Som användare kan man lägga till web-appen i hemskärmen som ikon </p>
          <p>Om ni efter en stund av användning skulle vilja uppgradera till en Native eller Hybrid app så är det möjligt.  </p>
          <p>Nedan kommer jag förklara dom olika fördelar med respektive app och vad ni kommer kunna lägga till</p>
          <p>För att utveckla eran webbplats.</p>
          <h3>Hybrid</h3>
-         <p>En Hybridapp kan man med enkel förklaring säga är en kombinerad native/web app. Man bygger alltså</p>
+         <p>En Hybridapp kan man med enkel förklaring säga är en webbapp som är paketerad som en native-app. Man bygger alltså</p>
          <p>En app som funkar bra i alla operativsystem, iOS, Android och Blackberry OS.</p>
          <p>Om ni väljer att uppdatera till en hybrid så kommer ni bland annat kunna ta del av fler funktioner som en telefon tillhandahåller. </p>
          <p>Som t.ex Kamera och lagring. En hybrid app är också snabbare än en vanlig webb app.</p>
