--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Deluxe parkering</title>
@@ -39,8 +39,7 @@
   
 
     <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2003.713360754481!2d17.645310516093556!3d59.85390038184548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465fcbfb840727d5%3A0xd7e7da3f98a934c5!2sKungs%C3%A4ngsgatan%2054%2C%20753%2019%20Uppsala!5e0!3m2!1ssv!2sse!4v1568707621372!5m2!1ssv!2sse"frameborder="0"
-          style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2003.713360754481!2d17.645310516093556!3d59.85390038184548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465fcbfb840727d5%3A0xd7e7da3f98a934c5!2sKungs%C3%A4ngsgatan%2054%2C%20753%2019%20Uppsala!5e0!3m2!1ssv!2sse!4v1568707621372!5m2!1ssv!2sse"></iframe>
       </div>
     
     <div class="adress">
