--- a/aboutus.html
+++ b/aboutus.html
@@ -44,29 +44,34 @@
 
     <div class="infoabout">
         <h1>Om oss</h1>
-         <h3>Er app</h3>
-         <p>Med tanke att på er budget och era specifikations krav så valde vi på Jansson webbyrå att göra ett web-app.</p>
-         <p>Detta underlättar också för era kunder då dom enbart behöver gå in på en valfri webbläsare. En web-app </p>
-         <p>Är också enklare att uppdatera, vilket i slut ändan gör det billigare vid en uppdatering.</p>
-         <p>Om ni efter en stund av användning skulle vilja uppgradera till en Native eller Hybrid app så är det möjligt.  </p>
-         <p>Nedan kommer jag förklara dom olika fördelar med respektive app och vad ni kommer kunna lägga till</p>
-         <p>För att utveckla eran webbplats.</p>
-         <h3>Hybrid</h3>
-         <p>En Hybridapp kan man med enkel förklaring säga är en kombinerad native/web app. Man bygger alltså</p>
-         <p>En app som funkar bra i alla operativsystem, iOS, Android och Blackberry OS.</p>
-         <p>Om ni väljer att uppdatera till en hybrid så kommer ni bland annat kunna ta del av fler funktioner som en telefon tillhandahåller. </p>
-         <p>Som t.ex Kamera och lagring. En hybrid app är också snabbare än en vanlig webb app.</p>
-         <h3>Native</h3>
-         <p>En native app kan man med en enkel förklaring säga är en app som enbart är anpassat för ett operativsystem, t.ex iOS.</p>
-         <p>Då kan man kanske undra varför man inte bygger en hybrid istället. Men det finns nämligen olikheter som gör att en Native är bättre.</p>
-         <p>Med en Native app kan man använda samtliga av telefonens funktioner. Eftersom att man bygger en app som enbart är anpassat till</p>
-         <p>Ett operativ system så blir det också möjligt att göra appen mer estestisk snygg och användarvänlig. När man bygger en Native </p>
-         <p>Så använder man sig av te.x Apples egna språk och ramverk, vilket gör att appen också blir säker. Man kan också med hjälp av </p>
-         <p>Inställningar göra en Native mer säker.</p>
-         <h3>Vem ska man välja?</h3>
-         <p>Det här med att välja är inte alltid det enklaste. Men som företagare ska man se över sina behov, så att man inte väljer fel app.</p>
-         <p>En native-app är mer utav en Deluxe app, medans en hybrid är en bra och väl fungerande app. Eftersom att man bygger en</p>
-         <p>Native app på flera ramverk så blir den också dyrare att bygga. Så utifrån era specifikationer så kommer en Hybrid app fungera mycket väl.</p>
+        <h3>Er app</h3>
+        <p>Med tanke att på er budget och era specifikations krav så valde vi på Janssons webbyrå att göra ett web-app.</p>
+        <p>Detta underlättar också för era kunder då dom enbart behöver gå in på en valfri webbläsare. En web-app </p>
+        <p>Är också enklare att uppdatera, vilket i slut ändan gör det billigare vid en uppdatering.</p>
+        <p>Som användare kan man lägga till web-appen i hemskärmen som ikon, vilket att gör att appen kan användas som en </p>
+        <p>hybrid/native-app. Med dagens teknik och kunskap så ser en web-app nästan likadan ut som en hybrid/native app</p>
+        <p>Om ni efter en stund av användning skulle vilja uppgradera till en Native eller Hybrid app så är det möjligt.  </p>
+        <p>Nedan kommer jag förklara dom olika fördelar med respektive app och vad ni kommer kunna lägga till</p>
+        <p>För att utveckla eran webbplats.</p>
+        <h3>Hybrid</h3>
+        <p>En Hybridapp kan man med enkel förklaring säga är en webb-app som är paketerad som en native-app. Man bygger alltså</p>
+        <p>en app som funkar bra i alla operativsystem, iOS, Android. Med lite ansträngning till så kan man också så det fungera</p>
+        <p>bra i Blackberry OS och Windows phones.</p>
+        <p>Om ni väljer att uppdatera till en hybrid så kommer ni bland annat kunna ta del av fler funktioner som en telefon tillhandahåller. </p>
+        <p>Som t.ex Kamera och bluetooth.En hybrid app är också snabbare än en vanlig webb app och den laddas ner i appstore.</p>
+        
+        <h3>Native</h3>
+        <p>En native app kan man med en enkel förklaring säga är en app som enbart är anpassat för ett operativsystem, t.ex iOS.</p>
+        <p>Då kan man kanske undra varför man inte bygger en hybrid istället. Men det finns nämligen olikheter som gör att en native-app är bättre.</p>
+        <p>Med en Native app kan man använda samtliga av telefonens funktioner. Eftersom att man bygger en app som enbart är anpassat till</p>
+        <p>Ett operativ system så blir det också möjligt att göra appen mer estestisk snygg och användarvänlig. När man bygger en native-app </p>
+        <p>så använder man sig av te.x Apples egna språk och ramverk, vilket gör att appen också blir säkrare. Man kan också med hjälp av </p>
+        <p>inställningar justera en native-apps säkerhet. Om man tar en hybrid app som ett exempel så kan den utsättas för större säkerhetsrisker</p>
+        <p>då den t.ex är utvecklad i programmeringspråket javascript, som är ett mer öppet spårk. En native-App laddar man ner iappstore.</p>
+        <h3>Vem ska man välja?</h3>
+        <p>Det här med att välja är inte alltid det enklaste. Men som företagare ska man se över sina behov.</p>
+        <p>En native-app är mer utav en Deluxe app, medans en hybrid är en bra och väl fungerande app. Eftersom att man bygger en</p>
+        <p>native-app på flera ramverk så blir den också dyrare att bygga. Så utifrån era specifikationer så kommer en Hybrid app fungera mycket väl.</p>
 
     </div>
 
