--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
     <header>
         <div class="nav-container">
             <nav class="nav-checkbox">
-                <a href="#" class="logo">Deluxe parkering</a>
+                <a href="index.html" class="logo">Deluxe parkering</a>
                 <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
                 <label for="tab-nav" class="tab-nav-label">Menu</label>
                 <ul class="tab-content">
