--- a/book.html
+++ b/book.html
@@ -16,7 +16,7 @@
     <header>
         <div class="nav-container">
             <nav class="nav-checkbox">
-                <a href="#" class="logo">Deluxe parkering</a>
+                <a href="index.html" class="logo">Deluxe parkering</a>
                 <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
                 <label for="tab-nav" class="tab-nav-label">Menu</label>
                 <ul class="tab-content">
@@ -42,28 +42,63 @@
         <h2>vi dig inom 15 minuter</h2>
         <form id="kontakt" name="kontakt" method="post" action="formmail.php">
 
-            <label for="name">Namn</label><br>
-            <input type="text" id="name" name="firstname" placeholder="Namn.."><br>
-
-            <label for="reg">Registeringsnummer</label><br>
-            <input type="text" id="reg" name="Efternamn" placeholder="Registeringsnummer.."><br>
+            <label for="name">Namn</label>
+            <br/>
+            <input type="text" id="name" name="firstname" placeholder="Namn..">
+            <br/>
+            <label for="reg">Registeringsnummer</label>
+            <br/>
+            <input type="text" id="reg" name="Efternamn" placeholder="Registeringsnummer..">
+            <br/>
             <label for="service">Välj tjänst</label>
-            <br />
+            <br/>
             <select id="service" name="service">
                 <option value="Parking">parkering</option>
                 <option value="carwash">Biltvätt</option>
                 <option value="car">Bilservice</option>
             </select>
+            <br/>
+            <label for="Vehicle">Välj fordon</label>
+            <br/>
+            <select id="Vehicle" name="Vehicle">
+                <option value="Parking">El-bil</option>
+                <option value="carwash">Bil</option>
+                <option value="car">MC</option>
+            </select>
+            <br />
+            <label for="option">Alternativ(ej parkering)</label>
+            <br/>
+            <select id="option" name="option">
+                <option value="Parking">Standard</option>
+                <option value="carwash">Plus</option>
+                <option value="car">Deluxe</option>
+            </select>
+            <br/>
+            <label for="option">Datum</label>
+            <br/>
+            <input name="date" type="date" placeholder="Select date" min="2018-10-22" max="2020-07-31"><br/><br/>
             <br />
 
-
-            <br />
+           
             <input name="submit" type="submit" value="Boka">
         </form>
     </div>
     <div class="imgbook">
-        <img src="clock.jpg" alt="clock">
+        <img src="bilder/clock.jpg" alt="clock">
     </div>
+
+    <div class="bookphone">
+        
+        <h1>Ring oss för</h1>
+        <h1>bokning &#9742;</h1>
+        <p>___________________</p>
+        <h2>018 200 100 </h2>
+        <h4>kundtjänst </h4>
+        <p>vardagar l 06:00-22:00</p>
+        <p>Helger l 07:30-20:00</p>
+        <p>Röda dagar kan påverka</p>
+        <p>våra öppettider</p>
+    </div> 
 
 
 
