--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@
                     
                     <ul class="bokaservice">
                             <a href="book.html">
-                                    <img src="boka.png" alt="boka">
+                                    <img src="bilder/bokatid.PNG" alt="boka">
                                   </a>
                             </ul>
 
