--- a/service.html
+++ b/service.html
@@ -109,7 +109,7 @@
                 <div class="imgservice">
                     
                         <ul class="bokaservice">
-                                <li><a href="book.html"> <img src="bilder/boka.png" alt="boka"> </a></li>
+                                <li><a href="book.html"> <img src="bilder/boka.jpg" alt="boka"> </a></li>
                                 
                             </ul>
 
