--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Deluxe parkering</title>
@@ -93,7 +93,7 @@
 
     </div>
 
-    </br>
+    
 
 
     <div class="info2">
