--- a/book.html
+++ b/book.html
@@ -76,7 +76,7 @@
             <br/>
             <label for="option">Datum</label>
             <br/>
-            <input name="date" type="date" placeholder="Select date" min="2018-10-22" max="2020-07-31"><br/><br/>
+            <input name="date" type="date" min="2018-10-22" max="2020-07-31"><br/><br/>
             <br />
 
            
