--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <nav class="nav-checkbox">
                 <a href="index.html" class="logo">Deluxe parkering</a>
                 <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
-                <label for="tab-nav" class="tab-nav-label">Menu</label>
+                <label for="tab-nav" class="tab-nav-label">Meny</label>
                 <ul class="tab-content">
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="service.html">Övriga tjänster</a></li>
@@ -39,7 +39,7 @@
     <br />
 
     
-    <div class="forma">
+    <div class="formabook">
 
         <h2>Ställ en fråga?</h2>
         
