--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
             <nav class="nav-checkbox">
                 <a href="index.html" class="logo">Deluxe parkering</a>
                 <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
-                <label for="tab-nav" class="tab-nav-label">Menu</label>
+                <label for="tab-nav" class="tab-nav-label">Meny</label>
                 <ul class="tab-content">
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="service.html">Övriga tjänster</a></li>
@@ -97,12 +97,10 @@
         <h2>Service Standard</h2>
         <h1>1599 :-</h1>
 
-        <p>-Förtvätt</p>
-        <p>-tvätt</p>
-        <p>-Schampo</p>
-        <p>-Tork</p>
-        <p>-vaxpolering</p>
-        <p>-Invändingt</p>
+        <p>-Oljebyte</p>
+        <p>-Lampor</p>
+        <p>-Bromsar</p>
+        <p>-Motor</p>
     </div>
 
     <div class="column">
@@ -117,12 +115,12 @@
         <h2>Service Deluxe</h2>
         <h1>2599 :-</h1>
 
-        <p>-Förtvätt</p>
-        <p>-tvätt</p>
-        <p>-Schampo</p>
-        <p>-Tork</p>
-        <p>-vaxpolering</p>
-        <p>-Invändingt</p>
+        <p>-Oljebyte</p>
+        <p>-Vindrutor</p>
+        <p>-Lampor</p>
+        <p>-Bromsar</p>
+        <p>-Motor</p>
+        <p>-Elektronik</p>
 
     </div>
 
