--- a/book.html
+++ b/book.html
@@ -18,7 +18,7 @@
             <nav class="nav-checkbox">
                 <a href="index.html" class="logo">Deluxe parkering</a>
                 <input id="tab-nav" type="checkbox" class="tab-nav" name="tabs">
-                <label for="tab-nav" class="tab-nav-label">Menu</label>
+                <label for="tab-nav" class="tab-nav-label">Meny</label>
                 <ul class="tab-content">
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="service.html">Övriga tjänster</a></li>
@@ -38,8 +38,8 @@
     <br />
 
     <div class="forma">
-        <h2>Fyll i nedanstående uppgifter så kontaktar</h2>
-        <h2>vi dig inom 15 minuter</h2>
+        <h2>Boka den service som passar dig.</h2>
+        
         <form id="kontakt" name="kontakt" method="post" action="formmail.php">
 
             <label for="name">Namn</label>
@@ -76,7 +76,11 @@
             <br/>
             <label for="option">Datum</label>
             <br/>
-            <input name="date" type="date" min="2018-10-22" max="2020-07-31"><br/><br/>
+            <input name="date" type="date" min="2018-10-22" max="2020-07-31">
+            <br/>
+            <label for="option">Tid</label>
+            <br/>
+            <input name="time" type="time" ><br/><br/>
             <br />
 
            
@@ -102,7 +106,7 @@
 
 
 
-    <div class="info">
+    <div class="info3">
 
         <p>Info@LP.se │ 018 200 100 │ Kungsängsgatan 54 753 18 Uppsala</p>
 
